# kakaotalk-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  chat_info.py  decrypt.py  registry.py  server.py  txt_parser.py
